# Insurance

./: README.md  databricks.yml  pyproject.toml  setup.py
docs/: data_flow.md
resources/: clusters.yml  demo_job.yml  flatten_job.yml  gold_job.yml  kafka_job.yml  rdv_job.yml
src/insurance/: main.py
src/insurance/config/: dq_rules.yml  gold_schemas.yml  pipeline_config.yml
src/insurance/config/topics/: agents.yml  booking_line.yml  claims.yml  customers.yml  policies.yml  risk_assessment.yml
src/insurance/data_modeling/: rdv_models.dbml
src/insurance/ingestion/: kafka_consumer.py
src/insurance/ingestion/streaming/: kafka_consumer.py
src/insurance/pipelines/: bronze_to_flatten.py  flatten_to_rdv.py
src/insurance/processing/: rdv_builder.py  standardize_data.py  star_schema.py
src/insurance/utils/: audit.py  config.py  constants.py  dq_checker.py  logger.py  schema_registry.py  spark_utils.py
