[project]
name = "insurance"
version = "0.0.1"
authors = [{ name = "kartikstudies29@gmail.com" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    # Any dependencies for jobs and pipelines in this project can be added here
    # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
    #
    # LIMITATION: for pipelines, dependencies are cached during development;
    # add dependencies to the 'environment' section of your pipeline.yml file instead
    "databricks-connect==17.3",
    "ipykernel>=7.2.0",
    "setuptools>=82.0.1",
    "wheel>=0.46.3",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "databricks-dlt",
    "databricks-connect>=17.3",
    "ipykernel",
]

[project.scripts]
main = "insurance_dev.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
