[project]
name = "insurance"
version = "0.0.1"
authors = [{ name = "kartikstudies29@gmail.com" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "databricks-connect==17.3"
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "databricks-dlt",
    "databricks-connect>=17.3",
    "ipykernel",
]

[project.scripts]
main = "insurance.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff]
line-length = 120